--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@saas-ui/auth": "^3.0.6",
         "@saas-ui/react": "^2.7.2",
         "@svgr/webpack": "^7.0.0",
+        "axios": "^1.9.0",
         "contentlayer": "^0.3.4",
         "date-fns": "^2.30.0",
         "framer-motion": "^10.18.0",
@@ -28,7 +29,8 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.12.0",
-        "react-remove-scroll": "^2.5.9"
+        "react-remove-scroll": "^2.5.9",
+        "react-router-dom": "^7.5.2"
     },
     "devDependencies": {
         "@babel/core": "^7.24.4",
