--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "next": "^14.1.4",
         "next-contentlayer": "^0.3.4",
         "next-seo": "^6.5.0",
+        "razorpay": "^2.9.6",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.12.0",
