--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
         "@fontsource/inter": "^4.5.15",
+        "@react-email/components": "^0.0.36",
         "@saas-ui/auth": "^3.0.6",
         "@saas-ui/react": "^2.7.2",
         "@svgr/webpack": "^7.0.0",
@@ -23,7 +24,7 @@
         "contentlayer": "^0.3.4",
         "date-fns": "^2.30.0",
         "framer-motion": "^10.18.0",
-        "next": "^14.1.4",
+        "next": "^13",
         "next-contentlayer": "^0.3.4",
         "next-seo": "^6.5.0",
         "razorpay": "^2.9.6",
@@ -31,7 +32,8 @@
         "react-dom": "18.2.0",
         "react-icons": "^4.12.0",
         "react-remove-scroll": "^2.5.9",
-        "react-router-dom": "^7.5.2"
+        "react-router-dom": "^7.5.2",
+        "resend": "^4.4.1"
     },
     "devDependencies": {
         "@babel/core": "^7.24.4",
